# cpp-protobuf

./: CMakeLists.txt  README.md
cmake/: CollectSrcs.cmake
example/: main.cpp
example/hello/: Makefile  Person.cpp  Person.pb.cc  Person.pb.h  Person.proto  cscope.files  cscope.out  main.cpp  persion.h  person.pb  pro.cpp  tags
example/tt/: Makefile  cscope.files  cscope.out  derived.txt  main  main.cpp  pp.txt  tags  (+3 more)
include/: core.h  serialize.h  utils.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Comparator.h  GuardAble.h  GuardAble.h~  Singleton.h  comparator.cpp  cpp_token.h  diagnostics.cpp  diagnostics.h  gcc-fwd.h  gcc.h  indent.h  location.h
src/entry/: CMakeLists.txt  Entry.cpp  Plugin.cpp  Plugin.h
src/generator/: ArrayDecorator.cpp  ArrayDecorator.h  BoolField.cpp  BoolField.h  CMakeLists.txt  Class.cpp  Class.h  ClassField.cpp  ClassField.h  DoubleField.cpp  DoubleField.h  EnumField.cpp  EnumField.h  FieldBuilder.cpp  FieldBuilder.h  FieldType.h  FloatField.cpp  FloatField.h  FormatStream.cpp  FormatStream.h  Generator.cpp  Generator.h  IField.cpp  IField.h  IFieldDecorator.h  PointerDecorator.cpp  PointerDecorator.h  SIntField.cpp  SIntField.h  StringField.cpp  StringField.h  UIntField.cpp  UIntField.h  indent.cpp
src/meta/: CMakeLists.txt  DefaultValue.h  Metas.cpp  Metas.h  SerializeMeta.cpp  SerializeMeta.h
src/parser/: CMakeLists.txt  ClassInfo.cpp  ClassInfo.h  Collector.cpp  Collector.h  CppLexer.h  FieldInfo.cpp  FieldInfo.h  MetaParser.cpp  MetaParser.h  MethodInfo.h  TypeInfo.cpp  TypeInfo.h  Utils.cpp  Utils.h  cpp_lexer.cpp
(+2 files in other folders)
