cmake_minimum_required(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
IF(NOT WIN32)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -rdynamic -std=c++0x -Wno-literal-suffix")
ELSE()
    SET(CMAKE_CPP_FLAGS ${CMAKE_CXX_FLAGS} -rdynamic)
ENDIF()
MESSAGE(STATUS ${CMAKE_CXX_FLAGS})
add_definitions(-DBOOST_ALL_NO_LIB)
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(test)
